--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
                 <a class="header-logo" href="/"> WebStudio </a>
                 <ul class="header-list">
                     <li class="header-item">
-                        <a href="" class="header-link">Студия</a>
+                        <a href="./index.html" class="header-link">Студия</a>
                     </li>
                     <li class="header-item">
-                        <a href="" class="header-link">Портфолио</a>
+                        <a href="./portfolio.html" class="header-link"
+                            >Портфолио</a
+                        >
                     </li>
                     <li class="header-item">
-                        <a href="" class="header-link">Контакты</a>
+                        <a href="./index.html" class="header-link">Контакты</a>
                     </li>
                 </ul>
             </nav>
