--- a/portfolio.html
+++ b/portfolio.html
@@ -5,203 +5,220 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./css.reset.css" />
-        <link rel="stylesheet" href="./ccs.style.css" />
     </head>
+
     <body>
         <header class="header">
             <nav class="header-nav">
-                <a class="header-logo" href="/"> WebStudio </a>
-                <ul class="header-list">
+                <a class="header-logo link" href="/" lang="en"
+                    >Web<span class="color">Studio</span></a
+                >
+                <ul class="header-list list">
                     <li class="header-item">
-                        <a href="./index.html" class="header-link">Студия</a>
+                        <a href="./index.html" class="header-link link"
+                            >Студия</a
+                        >
                     </li>
                     <li class="header-item">
-                        <a href="./portfolio.html" class="header-link"
+                        <a
+                            href="./portfolio.html"
+                            class="header-link link curent"
                             >Портфолио</a
                         >
                     </li>
                     <li class="header-item">
-                        <a href="./index.html" class="header-link">Контакты</a>
+                        <a href="./index.html" class="header-link link"
+                            >Контакты</a
+                        >
                     </li>
                 </ul>
             </nav>
-            <ul>
+            <ul class="adress list list">
                 <li>
-                    <a class="header-mail" href="info@devstudio.com"
+                    <a class="header-mail link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li>
-                    <a class="header-tel" href="+380961111111"
+                    <a class="header-tel link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
             </ul>
         </header>
+        <main>
+            <section class="button">
+                <ul class="button-list list">
+                    <li class="button-item second-btn">
+                        <button type="button">Все</button>
+                    </li>
+                    <li class="button-item second-btn">
+                        <button type="button">Веб-сайты</button>
+                    </li>
+                    <li class="button-item second-btn">
+                        <button type="button">Приложения</button>
+                    </li>
+                    <li class="button-item second-btn">
+                        <button type="button">Дизайн</button>
+                    </li>
+                    <li class="button-item second-btn">
+                        <button type="button">Маркетинг</button>
+                    </li>
+                </ul>
+            </section>
 
-        <section class="button">
-            <ul class="button-list">
-                <li class="button-item"><button type="button">Все</button></li>
-                <li class="button-item">
-                    <button type="button">Веб-сайты</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Приложения</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Дизайн</button>
-                </li>
-                <li class="button-item">
-                    <button type="button">Маркетинг</button>
-                </li>
-            </ul>
-        </section>
+            <section class="content">
+                <ul class="content-list list">
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img9.jpg"
+                                alt="сайт"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Технокряк</h2>
+                            <p class="content-subtitle">Веб-сайт</p></a
+                        >
+                    </li>
 
-        <main class="content">
-            <ul class="content-list">
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img9.jpg"
-                            alt="сайт"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Технокряк</h2>
-                        <p class="content-subtitle">Веб-сайт</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img10.jpg"
+                                alt="баскетбол"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">
+                                Постер New Orlean vs Golden Star
+                            </h2>
+                            <p class="content-subtitle">Дизайн</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img10.jpg"
-                            alt="баскетбол"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">
-                            Постер New Orlean vs Golden Star
-                        </h2>
-                        <p class="content-subtitle">Дизайн</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img11.jpg"
+                                alt="лого"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Ресторан Seafood</h2>
+                            <p class="content-subtitle">Приложение</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img11.jpg"
-                            alt="лого"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Ресторан Seafood</h2>
-                        <p class="content-subtitle">Приложение</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img12.jpg"
+                                alt="наушники"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Проект Prime</h2>
+                            <p class="content-subtitle">Маркетинг</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img12.jpg"
-                            alt="наушники"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Проект Prime</h2>
-                        <p class="content-subtitle">Маркетинг</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img13.jpg"
+                                alt="коробки"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Проект Boxes</h2>
+                            <p class="content-subtitle">Приложение</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img13.jpg"
-                            alt="коробки"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Проект Boxes</h2>
-                        <p class="content-subtitle">Приложение</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img14.jpg"
+                                alt="монитор"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">
+                                Inspiration has no Borders
+                            </h2>
+                            <p class="content-subtitle">Веб-сайт</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img14.jpg"
-                            alt="монитор"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Inspiration has no Borders</h2>
-                        <p class="content-subtitle">Веб-сайт</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img15.jpg"
+                                alt="журнал"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">
+                                Издание Limited Edition
+                            </h2>
+                            <p class="content-subtitle">Дизайн</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img15.jpg"
-                            alt="журнал"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Издание Limited Edition</h2>
-                        <p class="content-subtitle">Дизайн</p></a
-                    >
-                </li>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img16.jpg"
+                                alt="бирка"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Проект LAB</h2>
+                            <p class="content-subtitle">Маркетинг</p></a
+                        >
+                    </li>
 
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img16.jpg"
-                            alt="бирка"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Проект LAB</h2>
-                        <p class="content-subtitle">Маркетинг</p></a
-                    >
-                </li>
-
-                <li class="content-item">
-                    <a>
-                        <img
-                            src="./images/img17.jpg"
-                            alt="ноут"
-                            width="370"
-                            height="294"
-                        />
-                        <h2 class="content-text">Growing Business</h2>
-                        <p class="content-subtitle">Приложение</p></a
-                    >
-                </li>
-            </ul>
+                    <li class="content-item">
+                        <a>
+                            <img
+                                src="./images/img17.jpg"
+                                alt="ноут"
+                                width="370"
+                                height="294"
+                            />
+                            <h2 class="content-text">Growing Business</h2>
+                            <p class="content-subtitle">Приложение</p></a
+                        >
+                    </li>
+                </ul>
+            </section>
         </main>
 
         <footer class="footer">
-            <a class="footer-logo" href="/">WebStudio</a>
-            <ul class="footer-list">
+            <a class="footer-logo link" lang="en" href="/"
+                >Web<span class="color-two">Studio</span></a
+            >
+            <ul class="footer-list list">
                 <li class="footer-item">
                     <address class="footer-adress">
                         г. Киев, пр-т Леси Украинки, 26
                     </address>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-mail" href="info@devstudio.com"
+                    <a class="footer-mail link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li class="footer-item">
-                    <a class="footer-tel" href="+380961111111"
+                    <a class="footer-tel link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
