--- a/index.html
+++ b/index.html
@@ -5,41 +5,47 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./css.reset.css" />
-        <link rel="stylesheet" href="./ccs.style.css" />
     </head>
+
     <body>
         <header class="header">
             <nav class="header-nav">
-                <a class="header-logo" href="/"> WebStudio </a>
-                <ul class="header-list">
+                <a class="header-logo link" href="/" lang="en"
+                    >Web<span class="color">Studio</span></a
+                >
+                <ul class="header-list list">
                     <li class="header-item">
-                        <a href="./index.html" class="header-link">Студия</a>
+                        <a href="./index.html" class="header-link link curent"
+                            >Студия</a
+                        >
                     </li>
                     <li class="header-item">
-                        <a href="./portfolio.html" class="header-link"
+                        <a href="./portfolio.html" class="header-link link"
                             >Портфолио</a
                         >
                     </li>
                     <li class="header-item">
-                        <a href="./index.html" class="header-link">Контакты</a>
+                        <a href="./index.html" class="header-link link"
+                            >Контакты</a
+                        >
                     </li>
                 </ul>
             </nav>
-            <ul>
+            <ul class="adress list">
                 <li>
-                    <a class="header-mail" href="info@devstudio.com"
+                    <a class="header-mail link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li>
-                    <a class="header-tel" href="+380961111111"
+                    <a class="header-tel link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
@@ -50,15 +56,17 @@
                 <h1 class="hero-title">
                     Эффективные решения для вашего бизнеса
                 </h1>
-                <button type="button" class="hero-btn">Заказать услугу</button>
+                <button type="button" class="hero-btn pointer">
+                    Заказать услугу
+                </button>
             </section>
 
             <section class="main">
                 <h2 class="main-title">Наши преимущества</h2>
-                <ul class="main-list">
+                <ul class="main-list list">
                     <li class="main-item">
                         <h3 class="main-subtitle">Внимание к деталям</h3>
-                        <p>
+                        <p class="main-text">
                             Идейные соображения, а также начало повседневной
                             работы по формированию позиции.
                         </p>
@@ -89,7 +97,7 @@
 
             <section class="box">
                 <h2 class="box-title">Чем мы занимаемся</h2>
-                <ul class="box-list">
+                <ul class="box-list list">
                     <li class="box-item">
                         <img src="./images/img.jpg" alt="box1" width="370" />
                     </li>
@@ -104,7 +112,7 @@
 
             <section class="about">
                 <h2 class="about-title">Наша команда</h2>
-                <ul class="about-list">
+                <ul class="about-list list">
                     <li>
                         <img
                             src="./images/img4.jpg"
@@ -125,7 +133,6 @@
                         <p class="about-subtitle" lang="en">
                             Frontend Developer
                         </p>
-                        >
                     </li>
 
                     <li class="about-item">
@@ -152,20 +159,22 @@
         </main>
 
         <footer class="footer">
-            <a class="footer-logo" href="/">WebStudio</a>
-            <ul class="footer-list">
+            <a class="footer-logo link" lang="en" href="/"
+                >Web<span class="color-two">Studio</span></a
+            >
+            <ul class="footer-list list">
                 <li class="footer-item">
                     <address class="footer-adress">
                         г. Киев, пр-т Леси Украинки, 26
                     </address>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-mail" href="info@devstudio.com"
+                    <a class="footer-mail link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li class="footer-item">
-                    <a class="footer-tel" href="+380961111111"
+                    <a class="footer-tel link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
