--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,8 @@
         </header>
         <main>
             <section class="button">
+                <h1 class="content-box">Наш каталог</h1>
+
                 <ul class="button-list list">
                     <li class="button-item second-btn">
                         <button type="button">Все</button>
