--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 <h1 class="content-box">Наш каталог</h1>
 
                 <ul class="button-list list">
-                    <li class="button-item second-btn">
+                    <li class="button-item second-btn-curent">
                         <button type="button">Все</button>
                     </li>
                     <li class="button-item second-btn">
