--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 >
                 <ul class="header-list list">
                     <li class="header-item">
-                        <a href="./index.html" class="header-link link curent"
+                        <a href="./index.html" class="header-link link current"
                             >Студия</a
                         >
                     </li>
@@ -40,12 +40,12 @@
             </nav>
             <ul class="adress list">
                 <li>
-                    <a class="header-mail link" href="info@devstudio.com"
+                    <a class="adress-link link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li>
-                    <a class="header-tel link" href="+380961111111"
+                    <a class="adress-link link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
@@ -169,12 +169,12 @@
                     </address>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-mail link" href="info@devstudio.com"
+                    <a class="footer-contact link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li class="footer-item">
-                    <a class="footer-tel link" href="+380961111111"
+                    <a class="footer-contact link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
