--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                     <li class="header-item">
                         <a
                             href="./portfolio.html"
-                            class="header-link link curent"
+                            class="header-link link current"
                             >Портфолио</a
                         >
                     </li>
@@ -40,14 +40,14 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="adress list list">
+            <ul class="adress list">
                 <li>
-                    <a class="header-mail link" href="info@devstudio.com"
+                    <a class="adress-link link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li>
-                    <a class="header-tel link" href="+380961111111"
+                    <a class="adress-link link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
@@ -57,26 +57,37 @@
             <section class="button">
                 <h1 class="content-box">Наш каталог</h1>
 
-                <ul class="button-list list">
-                    <li class="button-item second-btn-curent">
-                        <button type="button">Все</button>
+                <ul class="portfolio-btn list">
+                    <li class="btn-list">
+                        <button
+                            type="button"
+                            class="button-item current-button"
+                        >
+                            Все
+                        </button>
                     </li>
-                    <li class="button-item second-btn">
-                        <button type="button">Веб-сайты</button>
+                    <li class="btn-list">
+                        <button type="button" class="button-item">
+                            Веб-сайты
+                        </button>
                     </li>
-                    <li class="button-item second-btn">
-                        <button type="button">Приложения</button>
+                    <li class="btn-list">
+                        <button type="button" class="button-item">
+                            Приложения
+                        </button>
                     </li>
-                    <li class="button-item second-btn">
-                        <button type="button">Дизайн</button>
+                    <li class="btn-list">
+                        <button type="button" class="button-item">
+                            Дизайн
+                        </button>
                     </li>
-                    <li class="button-item second-btn">
-                        <button type="button">Маркетинг</button>
+                    <li class="btn-list">
+                        <button type="button" class="button-item">
+                            Маркетинг
+                        </button>
                     </li>
                 </ul>
-            </section>
 
-            <section class="content">
                 <ul class="content-list list">
                     <li class="content-item">
                         <a>
@@ -215,12 +226,12 @@
                     </address>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-mail link" href="info@devstudio.com"
+                    <a class="footer-contact link" href="info@devstudio.com"
                         >info@devstudio.com</a
                     >
                 </li>
                 <li class="footer-item">
-                    <a class="footer-tel link" href="+380961111111"
+                    <a class="footer-contact link" href="+380961111111"
                         >+38 096 111 11 11</a
                     >
                 </li>
